# osi

./: 214_Шестаков_Лаб1.docx  README.md  child.c  parent.c
curse/report/: benchmark_output.txt  report.md  report.tex
curse/report/listings/: CMakeLists.txt  allocator.cpp.txt  allocator.h.txt  benchmark.cpp.txt
curse/report/styles/: log-style.sty
curse/src/: allocator.cpp  benchmark.cpp
lab1/: 214_Шестаков_Лаб1.docx  README.md  child.c  output.txt  parent.c
lab2/: 214_Шестаков_Лаб2.docx  threads_a.c  threads_p.c
lab3/: 214_Шестаков_Лаб3.docx  child.c  parent.c
lab4/: 214_Шестаков_Лаб4.docx  MinGW.md  allocator.h  buddy.c  buddy.txt  buddy2.txt  lab.py  labpref.py  main.c  main.txt  main2.txt  mckusick_karels.c  mckusick_karels.txt  mckusick_karels2.txt  ~$4_Шестаков_Лаб4.docx
